--- a/03-Javascript/activities/01-CodeDissection/js-dissect.html
+++ b/03-Javascript/activities/01-CodeDissection/js-dissect.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <script type="text/javascript">
-
+// input of this prompt gets saved to username
       var userName = prompt("What's your name?");
+      // boolean input gets saved to confirm
       var confirmCats = confirm("Do you like cats?");
-
+// strings
       var petName = "Meeses";
       var petType = "Tuxedo Cat";
+      // number
       var petAge = 5;
+      // boolean
       var petIsCat = true;
 
       if (confirmCats) {
@@ -54,6 +57,7 @@
       alert(catAge + 2);
 
       // Works as expected
+      // parsent # from a string
       alert(parseInt(catAge) + 2);
 
     </script>
