--- a/03-Javascript/activities/03-PizzaVariables/Unsolved/pizza-variables.html
+++ b/03-Javascript/activities/03-PizzaVariables/Unsolved/pizza-variables.html
@@ -16,8 +16,9 @@
 
     // FILL IN YOUR CODE HERE
     // =============================================
-
-
+    var name = "Michael";
+    var pizzaCount = 5;
+    var isHungry = true;
     // ==============================================
 
 
