--- a/03-Javascript/activities/27-MyFirstFunctions/Unsolved/my-first-functions-unsolved.html
+++ b/03-Javascript/activities/27-MyFirstFunctions/Unsolved/my-first-functions-unsolved.html
@@ -15,19 +15,49 @@
 
       // Create a Function called "adder" that take three arguments (x, y, z).
       // The function should add the arguments together, and log the result to the console.
-
-
+      const adder = (a, b, c) => {
+        let res = a + b + c
+        console.log(res);
+      }
+        adder(3,5,7)
       // Create a Function called "multiplier" that takes three arguments (x, y, z).
       // The function should multiply the arguments, and log the result to the console.
-
+      const multiplier = (a, b, c) => {
+        let res = a * b * c
+        console.log(res);
+      }
+        multiplier(3,5,7)
 
       // Create a Function called "isString" that takes three arguments (x, y, z).
       // "isString" determines if all three arguments are strings and logs an appropriate response to the console.
-
+      const isString = (x, y, z) => {
+        if (x === "" || y === "" || z === "") {
+          return true
+        }false
+      }
+      isString("jim", 7, "did")
 
       // Create a Function called "vowelChecker" that takes in a single argument (x).
       // "vowlChecker" logs whether or not the input is a vowel.
-
+      const vowelChecker = (x) => {
+        if (x == a) {
+          return true
+        } 
+        if (x == e) {
+          return true
+        } 
+        if (x == i) {
+          return true
+        } 
+        if (x == o) {
+          return true
+        } 
+        if (x == u) {
+          return true
+        } false
+        
+        
+      } 
 
       // BONUS
       // Creates a version of "adder" that returns its result. Function is called "adderReturn".
