--- a/03-Javascript/activities/23-RPS-Coded/Unsolved/rps-2.html
+++ b/03-Javascript/activities/23-RPS-Coded/Unsolved/rps-2.html
@@ -1,41 +1,69 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Rock Paper Scissors Part 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Rock Paper Scissors Part 2
-  </title>
-</head>
+  <body>
+    <div id="game">
+      <p>choose r, p, or <samp></samp></p>
+    </div>
 
-<body>
+    <script type="text/javascript">
+      // Creates an array that lists out all of the options (Rock, Paper, or Scissors).
+      var computerChoices = ["r", "p", "s"];
+      var wins = 0;
+      var looses = 0;
+      var ties = 0;
+      // This function is run whenever the user presses a key.
+      document.onkeyup = function (event) {
+        var userGuess = event.key;
+        var computerGuess =
+          computerChoices[Math.floor(Math.random() * computerChoices.length)];
+        alert("User guess: " + userGuess);
+        alert("Computer guess: " + computerGuess);
 
-  <div id="game">
+        if (userGuess == "r" || userGuess == "p" || userGuess == "s") {
+          if (userGuess == "r" && computerGuess == "p") {
+            looses++;
+          }
+          if (userGuess == "r" && computerGuess == "s") {
+            wins++;
+          }
+          if (userGuess == "p" && computerGuess == "r") {
+            wins++;
+          }
+          if (userGuess == "p" && computerGuess == "s") {
+            looses++;
+          }
+          if (userGuess == "s" && computerGuess == "p") {
+            wins++;
+          }
+          if (userGuess == "s" && computerGuess == "r") {
+            looses++;
+          }
+          if (userGuess === computerGuess) {
+            ties++;
+          }
+        } else {
+          alert("choose r, p, or s");
+        }
 
-  </div>
+        var html =
+          "<p>Please press r, p, or s to start.</p>" +
+          "<p>wins: " +
+          wins +
+          "</p>" +
+          "<p>looses: " +
+          looses +
+          "</p>" +
+          "<p>ties: " +
+          ties +
+          "</p>";
 
-  <script type="text/javascript">
-
-    // Creates an array that lists out all of the options (Rock, Paper, or Scissors).
-    var computerChoices = ["r", "p", "s"];
-
-    // This function is run whenever the user presses a key.
-    document.onkeyup = function(event) {
-
-      // Determines which key was pressed.
-      var userGuess = event.key;
-
-      // Randomly chooses a choice from the options array. This is the Computer's guess.
-      var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-
-      // Alerts the key the user pressed (userGuess).
-      alert("User guess: " + userGuess);
-
-      // Alerts the Computer's guess.
-      alert("Computer guess: " + computerGuess);
-
-    };
-  </script>
-
-</body>
-
+        document.querySelector("#game").innerHTML = html;
+      };
+    </script>
+  </body>
 </html>
