--- a/03-Javascript/activities/31-MyFirstObject/Unsolved/car-object-unsolved.html
+++ b/03-Javascript/activities/31-MyFirstObject/Unsolved/car-object-unsolved.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>My First Object</title>
   </head>
   <body>
-
     <script>
+
+// document.onkeyup = function (event) {
+//         var letter = String.fromCharCode(event.keyCode).toLowerCase();
+// }
+
 
       var car = {
         make: "Honda",
@@ -15,8 +19,7 @@
         mileage: 3000,
         isWorking: true,
 
-        driveToWork: function() {
-
+        driveToWork: function () {
           alert("Old Mileage: " + this.mileage);
 
           this.mileage = this.mileage + 8;
@@ -24,8 +27,7 @@
           alert("New mileage: " + this.mileage);
         },
 
-        driveAroundWorld: function() {
-
+        driveAroundWorld: function () {
           alert("Old Mileage: " + this.mileage);
 
           this.mileage = this.mileage + 24000;
@@ -36,32 +38,45 @@
           this.isWorking = false;
         },
 
-        getTuneUp: function() {
+        getTuneUp: function () {
           alert("Car is ready to go!");
           this.isWorking = true;
         },
 
-        honk: function() {
+        honk: function () {
           alert("Honk! Honk!");
-        }
+        },
       };
 
+      function writeStats() {
+        console.log("Make: " + car.make);
+        console.log("Model: " + car.model);
+        console.log("Color:  " + car.color);
+        console.log("Mileage: " + car.mileage);
+        console.log("Is working:  " + car.isWorking);
+        console.log("_______________________________");
+      };
 
-      // How would we log...
-
-      // The car's make?
-
-      // The car's model?
-
-      // The car's mileage?
-
-      // How would we run the car's driveToWork method?
-
-      // How would we run the car's driveAroundWorld method?
-
-      // How would we run the getTuneUp method?
-
+      document.onkeyup = function (event) {
+        // var letter = String.fromCharCode(event.keyCode).toLowerCase();
+        alert(letter);
+        if (letter == "h") {
+          car.honk();
+          writeStats();
+        }
+        if (letter == "d") {
+          car.driveToWork();
+          writeStats();
+        }
+        if (letter == "w") {
+          car.driveAroundWorld();
+          writeStats();
+        }
+        if (letter == "t") {
+          car.getTuneUp();
+          writeStats();
+        }
+      };
     </script>
-    
   </body>
 </html>
