--- a/03-Javascript/activities/33-Scope/Unsolved/scope-unsolved.html
+++ b/03-Javascript/activities/33-Scope/Unsolved/scope-unsolved.html
@@ -19,29 +19,34 @@
       console.log(message + name + " is " + age + ".");
     }
 
-    // ???
+    // "Oh my! Peleke is 92."
     firstFunction("Oh my! ");
 
     function secondFunction(name) {
       console.log(name + " is " + age + ".");
     }
 
-    // ???
+    // Julius is 92
     secondFunction("Julius");
 
     // Write a function that returns: name + " is " + age + ".",
     // It should use the value of name defined above, but
     // shadow the age value.
-    function thirdFunction() {
-      // ???
-    }
+    // function thirdFunction(age) {
+    //   return name + " is " + age + "."
+    // }
+    
+    // console.log(thirdFunction(25));
 
     // Log the return value of thirdFunction.
     // BONUS: Do this without a variable assignment.
-
+    function thirdFunction(name, age) {
+      return name + " is " + age + "."
+    }
+    console.log(thirdFunction("mike", 25));
     // CHALLENGE: Write a function that takes a string argument, and prints it.
-    function report(/* ??? */) {
-      // ???
+    function report(String) {
+      return String + name + languages + "."
     }
 
     // Next, research forEach, and use the report function
