--- a/03-Javascript/activities/09-ConditionalActivity/index.html
+++ b/03-Javascript/activities/09-ConditionalActivity/index.html
@@ -14,7 +14,7 @@
 
         if(doYouEatSteak = true) {
             alert("Here’s a Steak Sandwich!")
-        } else (doYouEatSteak = false) {
+        } else  {
             alert("here is a burger")
         }
 
