--- a/02-Responsive Web Design/01-HTML/activities/02-Attributes/B-href/href.html
+++ b/02-Responsive Web Design/01-HTML/activities/02-Attributes/B-href/href.html
@@ -18,6 +18,6 @@
             
     Add the href attribute for the CDC to the following anchor tag -->
 
-        <a>Center for Disease Control</a>
+    <a href="https://www.w3schools.com">
     </body>
 </html>
