--- a/02-Responsive Web Design/01-HTML/activities/02-Attributes/C-src/src.html
+++ b/02-Responsive Web Design/01-HTML/activities/02-Attributes/C-src/src.html
@@ -25,7 +25,7 @@
 
 -->
 
-      <img>
+<img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/dog_cool_summer_slideshow/1800x1200_dog_cool_summer_other.jpg">
 
     </body>
 </html>
