--- a/02-Responsive Web Design/01-HTML/activities/02-Attributes/D-width_height/wh.html
+++ b/02-Responsive Web Design/01-HTML/activities/02-Attributes/D-width_height/wh.html
@@ -23,7 +23,7 @@
             
     Add the width and height attribute to your img from the previous activity and adjust the size -->
 
-    <!-- PASTE IMAGE FROM PREVIOUS ACTIVITY HERE -->
+    <img src="img_girl.jpg" width="500" height="600">  
 
     </body>
 </html>
