--- a/02-Responsive Web Design/01-HTML/activities/02-Attributes/E-alt/alt.html
+++ b/02-Responsive Web Design/01-HTML/activities/02-Attributes/E-alt/alt.html
@@ -25,7 +25,7 @@
             
     Add the alt attribute to your img from the previous activity so that it describes the picture -->
 
-    <!-- PASTE IMAGE FROM PREVIOUS ACTIVITY HERE -->
+    <img src="img_girl.jpg" alt="Girl with a jacket">
 
     </body>
 </html>
