--- a/02-Responsive Web Design/01-HTML/activities/02-Attributes/F-style/style.html
+++ b/02-Responsive Web Design/01-HTML/activities/02-Attributes/F-style/style.html
@@ -27,8 +27,8 @@
 
    
 <div>
-
-    <h1>I should have a yellow background and red font.</h1>
+    <p style="color:red">This is a red paragraph.</p>
+    <h1 style="color:red; background: yellow">I should have a yellow background and red font.</h1>
 
 </div>
 
